<resources>
    <string name="app_name">Multiples</string>
    <string name="multiples_instructions">Find multiples of this number</string>
    <string name="factors_instructions">Find factors of this number</string>
    <string name="next_round">Next Round</string>
    <string name="game_over">Game Over</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="difficulty">Difficulty</string>
    <string name="number_of_rounds">Number of Rounds</string>
    <string name="new_game">New Game</string>
    <string name="main_menu">Main Menu</string>
    <string name="share_my_score_to_twitter">Share my score to twitter</string>
    <string name="end_of_game_message">Congratulations! You just scored %d out of %d on %s</string>
    <string name="twitter_message">%s just scored %d out of %d on %s</string>
    <string name="time_left">\ seconds\</string>
    <string name="time_per_round">Time per Round</string>
    <string name="name">Name</string>
    <string name="start_game">Start Game</string>
    <string name="how_to_play">How to Play</string>
    <string name="how_to_play_instructions1">Multiples is a game to test your quick maths skills!</string>
    <string name="how_to_play_instructions2">You\'ll be asked to quickly find either multiples, or factors, of a given number.</string>
    <string name="how_to_play_instructions3">Each round has a new number, with 10 possible answers to choose from.</string>
    <string name="how_to_play_instructions4">The round is over when you either select all the correct answers, or the timer runs out.</string>
    <string name="how_to_play_instructions5">Below is an example of what a round may look like:</string>
    <string name="how_to_play_instructions6">Don\'t forget to visit the settings page to change the difficulty and your name!</string>
    <string name="settings">Settings</string>
    <string name="lets_play">Lets Play!</string>
    <string name="screenshot_description">A screenshot showing what the game screen looks like</string>
    <string name="the_fun_factor_in_maths_just_got_multiplied">The fun factor in maths just got multiplied!</string>
    <string name="highscores">Highscores</string>
    <string name="player_name">Player Name</string>
</resources>