<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HowTo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:textAlignment="center"
        android:textSize="36sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/howToPlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/how_to_play_instructions1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/howToPlay2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/how_to_play_instructions2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/howToPlay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/how_to_play_instructions3"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/howToPlay4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/how_to_play_instructions4"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/howToPlay5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/how_to_play_instructions5"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/screenshot"
                android:layout_width="248dp"
                android:layout_height="490dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/screenshot_description"
                android:scaleType="fitXY"
                android:src="@drawable/screenshot_01" />

            <TextView
                android:id="@+id/howToPlay6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/how_to_play_instructions6"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="settingsPressed"
                android:text="@string/settings" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="playpressed"
                android:text="@string/lets_play" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>