<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_name"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_rounds"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/numberOfRounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_rounds"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_per_round"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/timePerRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_per_round"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textAlignment="center"
        android:textSize="36sp" />

    <RadioGroup
        android:id="@+id/difficultyRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/easyDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="difficultySet"
            android:text="@string/easy"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/hardDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="difficultySet"
            android:text="@string/hard"
            android:textSize="26sp" />

    </RadioGroup>

</androidx.appcompat.widget.LinearLayoutCompat>