<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOver">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/game_over_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        android:onClick="shareButtonPressed"
        android:text="@string/share_my_score_to_twitter"
        android:textSize="36sp" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        android:onClick="newGameButtonPressed"
        android:text="@string/new_game"
        android:textSize="26sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corners"
        android:onClick="mainMenuButtonPressed"
        android:text="@string/main_menu"
        android:textSize="26sp" />

</androidx.appcompat.widget.LinearLayoutCompat>